# AIBootCamp

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Globals.h  PlayLocalMatch.bat  SubmitAIBot.py  TileInfo.h
MyBotLogic/: Agent.cpp  Agent.h  ComputeNode.cpp  ComputeNode.h  Connector.cpp  Connector.h  Debug.h  GameManager.cpp  GameManager.h  Graph.cpp  Graph.h  LogicManager.cpp  LogicManager.h  Mission.h  MissionManager.cpp  MissionManager.h  MyBotLogic.cpp  MyBotLogic.h  Node.cpp  Node.h  State.h  Utility.h  log.txt
MyBotLogic/BehaviourTree/: Action.h  Composite.cpp  Composite.h  Conditions.cpp  Conditions.h  Discover.cpp  Discover.h  FindObjective.cpp  FindObjective.h  GoalTree.cpp  GoalTree.h  Selector.cpp  Selector.h  Sequence.cpp  Sequence.h  Task.h
MyBotLogic/State/: MoveState.cpp  MoveState.h  WaitCoopState.cpp  WaitCoopState.h  WaitState.cpp  WaitState.h
